新增表单验证

--- a/QrF.Sqlite.Nancy/Views/Account/login.html
+++ b/QrF.Sqlite.Nancy/Views/Account/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" >
     <meta name="keywords" content="">
     <meta name="author" content="" >
-    <title>QeF | 系统登录</title>
+    <title>QrF | 系统登录</title>
     <!-- Favicons-->
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- CORE CSS-->
