--- a/QrF.Sqlite.Nancy/Views/Home/index.html
+++ b/QrF.Sqlite.Nancy/Views/Home/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title>QeF | 首页</title>
+    <title>QrF | 首页</title>
     <!-- Favicons-->
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- CORE CSS-->
