--- a/_Lib/Views/Sys/menu.html
+++ b/_Lib/Views/Sys/menu.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title>QeF | 首页</title>
+    <title>QrF | 菜单管理</title>
     <!-- Favicons-->
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- CORE CSS-->
@@ -142,9 +142,9 @@
                                         <button class="btn cyan waves-effect waves-light left query_btn" type="button" name="action">
                                             <i class="mdi-action-search"></i> 查询
                                         </button>
-                                        <button class="btn teal waves-effect waves-light right edit_btn" type="button" name="action">
+                                        <a class="btn teal waves-effect waves-light right modal-trigger" href="#modal5">
                                             <i class="mdi-content-add"></i> 新增
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                             </form>
@@ -152,6 +152,67 @@
                                 <table class="responsive-table hoverable centered  striped table-data">
 
                                 </table>
+                            </div>
+                            <div class="col s12">
+                                <div id="modal5" class="modal bottom-sheet">
+                                    <div class="modal-content">
+                                        <div class="row">
+                                            <div class="col l8 offset-l2 m12 s12">
+                                                <h4>编辑菜单</h4>
+                                                <div class="card-panel">
+                                                    <form class="formValidate" id="formValidate" method="get" action="">
+                                                        <div class="row">
+                                                            <div class="input-field col s6 l4">
+                                                                <label for="Name">菜单名称 *</label>
+                                                                <input id="Name" name="Name" type="text" data-error=".errorTxt1">
+                                                                <div class="errorTxt1"></div>
+                                                            </div>
+                                                            <div class="input-field col s6 l4">
+                                                                <label for="Url">页面地址</label>
+                                                                <input id="Url" name="Url" type="text">
+                                                            </div>
+                                                            <div class="input-field col s6 l4">
+                                                                <label for="Info">描述信息</label>
+                                                                <input id="Info" name="Info" type="text">
+                                                            </div>
+                                                            <div class="input-field col s6 l4">
+                                                                <label for="Code">菜单编号</label>
+                                                                <input id="Code" name="Code" type="text">
+                                                            </div>
+                                                            <div class="input-field col s6 l4">
+                                                                <label for="Permission">认证编号</label>
+                                                                <input id="Permission" name="Permission" type="text">
+                                                            </div>
+                                                            <div class="input-field col s6 l4">
+                                                                <label for="Icon">菜单图标</label>
+                                                                <input id="Icon" name="Icon" type="text">
+                                                            </div>
+                                                            <div class="col s6 l4">
+                                                                <label for="ParentId">父级菜单 *</label>
+                                                                <select class="error browser-default" id="ParentId" name="ParentId" data-error=".errorTxt2">
+                                                                    <option value="1" selected>所有菜单</option>
+                                                                </select>
+                                                                <div class="input-field">
+                                                                    <div class="errorTxt2"></div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="input-field col s6 l4">
+                                                                <label for="Orderby">排列顺序</label>
+                                                                <input id="Orderby" name="Orderby" type="text">
+                                                            </div>
+                                                            <div class="input-field col s12">
+                                                                <button class="btn waves-effect waves-light right submit" type="submit" name="action">
+                                                                    <i class="mdi-content-send"></i>
+                                                                    提交
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
