--- a/_Lib/Views/Sys/menu.html
+++ b/_Lib/Views/Sys/menu.html
@@ -39,7 +39,7 @@
                 <div class="side-nav fixed">
                     <nav class="navbar-color">
                         <div class="nav-wrapper nav-small">
-                            <h1 class="logo-wrapper"><a href="homt/index.html" class="brand-logo darken-1"><img src="/content/images/materialize-logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1>
+                            <h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img src="/content/images/materialize-logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1>
                         </div>
                     </nav>
                 </div>
@@ -60,7 +60,7 @@
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="#"><i class="mdi-hardware-keyboard-tab"></i> 注销</a>
+                                        <a href="/login/logout"><i class="mdi-hardware-keyboard-tab"></i> 注销</a>
                                     </li>
                                 </ul>
                                 <a class="btn-flat dropdown-button waves-effect waves-light white-text profile-btn" href="#" data-activates="profile-dropdown">管理员<i class="mdi-navigation-arrow-drop-down right"></i></a>
@@ -93,18 +93,13 @@
                     </li>
                     <li class="li-hover"><div class="divider"></div></li>
                 </ul>
-                <a href="#" data-activates="slide-out" class="sidebar-collapse btn-floating btn-medium waves-effect waves-light hide-on-large-only cyan"><i class="mdi-navigation-menu"></i></a>
+                <a href="#" data-activates="slide-out" class="sidebar-collapse btn btn-floating btn-medium waves-effect waves-light hide-on-large-only cyan"><i class="mdi-navigation-menu"></i></a>
             </aside>
             <!-- END LEFT SIDEBAR NAV-->
             <!-- START CONTENT -->
             <section id="content">
                 <!--breadcrumbs start-->
                 <div id="breadcrumbs-wrapper">
-                    <!-- Search for small screen -->
-                    <div class="header-search-wrapper grey hide-on-large-only">
-                        <i class="mdi-action-search active"></i>
-                        <input type="text" name="Search" class="header-search-input z-depth-2" placeholder="Explore Materialize">
-                    </div>
                     <div class="container">
                         <div class="row">
                             <div class="col s12 m12 l12">
