--- a/QrF.Sqlite.Nancy/Views/Account/login.html
+++ b/QrF.Sqlite.Nancy/Views/Account/login.html
@@ -29,12 +29,13 @@
         </div>
         <h4>用户登录</h4>
         <form id="loginForm" method="post" class="form-edit" autocomplete="off">
+            <input type="hidden" name="Password" value="" />
             <div class="form-group">
                 <input class="form-control form-field" name="Username" data-type="text" type="text" required="required">
                 <label class="form-label">用户名</label>
             </div>
             <div class="form-group">
-                <input class="form-control form-field" name="Password" data-type="text" type="password" required="required">
+                <input class="form-control form-field" name="Pwd" data-type="text" type="password" required="required">
                 <label class="form-label">密　码</label>
             </div>
             <button id="btn-save" data-loading-text="登录中..." type="submit" class="floating-btn"><i class="icon-arrow"></i></button>
