--- a/_Lib/Views/Home/index.html
+++ b/_Lib/Views/Home/index.html
@@ -62,35 +62,14 @@
                                         <a href="/login/logout"><i class="mdi-hardware-keyboard-tab"></i> 注销</a>
                                     </li>
                                 </ul>
-                                <a class="btn-flat dropdown-button waves-effect waves-light white-text profile-btn" href="#" data-activates="profile-dropdown">管理员<i class="mdi-navigation-arrow-drop-down right"></i></a>
+                                <a class="btn-flat dropdown-button waves-effect waves-light white-text profile-btn user-name" href="#" data-activates="profile-dropdown"><i class="mdi-navigation-arrow-drop-down right"></i></a>
                                 <p class="user-roal">系统管理员</p>
                             </div>
                         </div>
                     </li>
-                    <li class="bold">
+                    <li class="bold active">
                         <a href="/" class="waves-effect waves-cyan"><i class="mdi-action-dashboard"></i> 首页</a>
                     </li>
-                    <li class="no-padding">
-                        <ul class="collapsible collapsible-accordion">
-                            <li class="bold">
-                                <a class="collapsible-header waves-effect waves-cyan"><i class="mdi-action-settings"></i> 系统管理</a>
-                                <div class="collapsible-body">
-                                    <ul>
-                                        <li>
-                                            <a href="/sys/menu"><i class="mdi-navigation-menu"></i> 菜单管理</a>
-                                        </li>
-                                        <li>
-                                            <a href="/sys/role"><i class="mdi-social-group"></i> 角色管理</a>
-                                        </li>
-                                        <li>
-                                            <a href="/sys/user"><i class="mdi-social-person"></i> 用户管理</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="li-hover"><div class="divider"></div></li>
                 </ul>
                 <a href="#" data-activates="slide-out" class="sidebar-collapse btn btn-floating btn-medium waves-effect waves-light hide-on-large-only cyan"><i class="mdi-navigation-menu"></i></a>
             </aside>
@@ -111,9 +90,20 @@
                 <!--start container-->
                 <div class="container">
                     <div class="section">
-                        <p class="caption">Widgets allow users to turn personal content into dynamic web apps that can be shared on websites where the code can be installed.</p>
+                        <p class="caption">快捷入口</p>
                         <div class="divider"></div>
+                        <div class="row">
+                            <div class="col s12 m12 l12">
 
+                            </div>
+                        </div>
+                        <p class="caption">待办事项</p>
+                        <div class="divider"></div>
+                        <div class="row">
+                            <div class="col s12 m12 l12">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!--end container-->
